11.dec (db)
      - improved wording of style dialog (particularly the "Page" section)
      - significant number of capitalization/wording fixes 
       (I don't plan to make more significant capitalization fixes until next dev. cycle)
9.dec (db)
      - use same name for palette title, Create menu item, and window title
      - use words "half, quarter, etc" instead of fractions "1/2, 1/4" for tuplet dialog
      (og)
      - exportly: fermatas on rests.
8.dec (db)
      - add pl and nb handbooks to installer
      - update polish translation from perotinus
      - add sound/TimGM6M.sf2 to installer (preferences not set yet)
6.dec (ws)
      - enable input focus for slider widgets
      - other tuplets dialog: user can now select the duration type of actual notes
      - fix: Tuplet crash 7:3
      - fix: pasting 2 measure on the last measure causes glitch
      - fix: crash removing last staff
      - fix: score view after close left-most tab and crash
5.dec (db)
      - commit Toby's patch for manual/ProcessHTML.py
       (offline mode, proper command line options, and general code cleanup)
3.dec (ws)
      - Reorganized layout of beams. They are not longer restricted to one measure.
        However beams spanning systems do not work yet.
3.dec (db)
      - Add spacer to Layout > Breaks & Spacer
      - Minor renaming
            - Rename "Breaths" palette to "Breaths & Pauses" since
              it contains caesura
            - Sentence case for all palette tooltips
            - Standardize on ampersand (&) instead of mixed use of
              slash (/) and comma (,) for palette titles
      - Better error message for restore session
      - Update pt_BR translation from ..vitor..
      (og)
	-exportly: fixed bugs connected to pickupbar.
1.dec (lv)
      - fix MusicXML export of pedal symbols
30.nov (ws)
      - fixed: Crash with rewind in debug mode
      - more articulation symbols
29.nov (ws)